create reusable component for each page and start the getting-started page

--- a/src/app/pages/about-me/about-me.component.scss
+++ b/src/app/pages/about-me/about-me.component.scss
@@ -15,5 +15,9 @@
 .creds {
   margin: 24px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
+  button {
+    margin: 10px;
+  }
 }
